Removed docs Implemented tasks 1,2,3
