# app/controllers/Task.js
@@ -1,0 +1,7 @@
+'use strict';
+
+let TaskController = require('./TaskController');
+
+module.exports.performtaskidPUT = function(req, res, next) {
+    TaskController.performtaskidPUT(req, res, next);
+};
